<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/costOfService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cost_of_service"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/how_was_the_service"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/costOfService" />

    <RadioGroup
        android:id="@+id/tipOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/amazing_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_20"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/good_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_18"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/ok_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_15"
            android:textSize="18sp" />
    </RadioGroup>

    <Switch
        android:id="@+id/round_up_switch"
        android:layout_width="347dp"
        android:layout_height="35dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:checked="true"
        android:text="@string/round_up_tip"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipOptions"
        app:layout_constraintVertical_bias="0.04"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/round_up_switch"
        app:layout_constraintVertical_bias="0.063"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tipResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        tools:text="@string/tip_amount"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton"
        app:layout_constraintVertical_bias="0.021">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>